RESOLVED FIXED45409
text/plain documents that start with \n trigger ASSERT
https://bugs.webkit.org/show_bug.cgi?id=45409
Summary text/plain documents that start with \n trigger ASSERT
Adam Barth
Reported 2010-09-08 12:34:26 PDT
text/plain documents that start with \n trigger ASSERT
Attachments
Patch (3.58 KB, patch)
2010-09-08 12:36 PDT, Adam Barth
eric: review+
eric: commit-queue+
Adam Barth
Comment 1 2010-09-08 12:36:58 PDT
Eric Seidel (no email)
Comment 2 2010-09-08 13:05:29 PDT
Comment on attachment 66929 [details] Patch OK.
Alexey Proskuryakov
Comment 3 2010-09-08 17:06:48 PDT
+ // PAINTEXTState and ignore m_skipLeadingNewLineForListing. PAINTEXTState!
Adam Barth
Comment 4 2010-09-08 17:13:11 PDT
Freudian slip?
Adam Barth
Comment 5 2010-09-08 17:19:08 PDT
Note You need to log in before you can comment on or make changes to this bug.