2010-09-08  Adam Barth  <abarth@webkit.org>

Reviewed by Eric Seidel.

        text/plain documents that start with \n trigger ASSERT
        https://bugs.webkit.org/show_bug.cgi?id=45409

        Because the TextDocumentParser uses a <pre> element to show the text,
        it ran into a requirement from HTML5 to skip any initial \n character
        tokens inside a <pre> element.  We don't want the behavior for
        TextDocuments, so I've loosened our ASSERTs and added a comment and a
        test to document the correct behavior.

        Test: fast/tokenizer/text-plain.html

        * html/parser/HTMLTokenizer.cpp:
        (WebCore::HTMLTokenizer::nextToken):
2010-09-08  Adam Barth  <abarth@webkit.org>

        Reviewed by Eric Seidel.

        text/plain documents that start with \n trigger ASSERT
        https://bugs.webkit.org/show_bug.cgi?id=45409

        * fast/tokenizer/resources/text.txt: Added.
        * fast/tokenizer/text-plain.html: Added.


Canonical link: https://commits.webkit.org/57786@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@67041 268f45cc-cd09-0410-ab3c-d52691b4dbfc